fixed CSS bug where text was overflowing to the right of the page on small mobile screens

--- a/css/about.css
+++ b/css/about.css
@@ -130,8 +130,8 @@
 .about-me-text-container {
   width: 90%;
   font-family: var(--paragraph-font);
-  font-size: 1.1rem;
-  line-height: 1.5;
+  font-size: 1rem;
+  line-height: 1.3;
 }
 
 .about-me-title,
@@ -144,7 +144,7 @@
 }
 
 .about-me-image {
-  width: 250px;
+  width: 175px;
   height: auto;
   box-shadow: var(--shadow);
   margin-bottom: 1rem;
@@ -173,7 +173,7 @@
 }
 
 .experience-img {
-  width: 75%;
+  width: 50%;
   height: auto;
   box-shadow: var(--shadow);
   margin-bottom: 1rem;
@@ -181,10 +181,11 @@
 
 .experience-text-container {
   width: 90%;
-  margin-left: 2rem;
-  font-size: 1.1rem;
+  /* margin-left: 2rem; */
+  font-size: 1rem;
   font-family: var(--paragraph-font);
-  line-height: 1.5;
+  line-height: 1.3;
+  align-self: center;
 }
 
 .experience-title {
